--- a/src/html/homepage.html
+++ b/src/html/homepage.html
@@ -1,5 +1,6 @@
 <main class="homepage">
 	<h1>HOMEPAGE</h1>
+	<img src="$img/example.jpg">
 	<p>
 		Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde iusto,
 		facere, assumenda sint minima nemo dolorem tempora inventore odio
